2011-11-06  Jose E. Marchesi  <jemarch@gnu.org>

	Legal and minor cosmetic changes.
	* README-dev: Copyright notification fixed.

	* AUTHORS: Initial content.

	* Changelog: Copyright notification added at the end.

	* src/cockroach.c: Unify source headers.

2011-10-31  Jose E. Marchesi  <jco@terma.com>

	bootstrap: check for README-dev to decide this is a check-out
	tree.
	* bootstrap (checkout_only_file): Check for README-dev to
	determine this is a check-out tree.

	* README-dev: New file.

2011-10-31  Jose E. Marchesi  <jco@terma.com>

	manual: initial stub.
	* doc/cockroach.texi: New file.
	(Overview): Stub chapter with no real contents.
	* doc/fdl.texi: New file.
	* doc/Makefile.am: New file.

	* src/cockroach.c: Header and copyright notification.

2011-10-31  Jose E. Marchesi  <jemarch@gnu.org>

	* README: New file.

Copyright 2011 Jose E. Marchesi
Copyright 2011 Giuseppe Scrivano

Copying and distribution of this file, with or without modification, are
permitted in any medium without royalty provided the copyright notice
and this notice are preserved.